GH-370: Enable ScriptProcessor tests back (#419)
* GH-370: Enable ScriptProcessor tests back

Fixes https://github.com/spring-cloud/stream-applications/issues/370

* Update dependencies for `script-processor`
* Add `maven-surefire-plugin` to `script-processor` POM
and specify `--add-opens` for Ruby requirements
* Mark all JavaScript tests with `@EnabledIfSystemProperty`
against `org.graalvm.language.js.home` which is available only
if GraalVM with `js` component enabled
* Fix `NewlineAtEndOfFile` rule for Checkstyle since on Windows
the line end is `crlf`
* Add `components: 'js'` to GraalVM installation steps for all the GH action scripts

* * Add dependencies for `graal-sdk` and `org.graalvm.js`
to make JavaScript working on a plain JVM